--- a/app/assets/stylesheets/normalize.css.scss
+++ b/app/assets/stylesheets/normalize.css.scss
@@ -502,3 +502,18 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+
+
+
+.cf {
+  *zoom: 1;
+  &:before,
+  &:after {
+    display: table;
+    content: "";
+  }
+  &:after {
+    clear: both;
+  }
+}
