--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -145,3 +145,110 @@ p { font-size:large; line-height:1.5; color: #555555;}
 }
 
 
+
+/*  ------------------------------------------
+      Adventure Page
+    ------------------------------------------ */    
+
+.adventures-timeline {
+  background:url("/assets/timeline-spine.png") repeat-y top center;
+  height:400px;
+  border-top:4px solid #e52900;
+  padding:0;
+  list-style: none;
+}
+
+.year {
+  font-size: 18px;
+  color:#999;
+  padding-top:.25em;
+}
+
+.inner-year { border-top:4px solid rgba(0,0,0,.1); width:48%; }
+
+.timeline-item {
+  display:block;
+  margin: 2em auto 4em;
+  position: relative;
+}
+
+.timeline-point {
+  border-radius: 50%;
+  width:10px;
+  height:10px;
+  border:3px solid $main_red;
+  background: white;
+  position: absolute;
+  top:0;
+  left:48.6%;
+  z-index: 3;
+}
+
+.timeline-point:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 13px;
+  left: -4px;
+  width: 0;
+  height: 0;
+  border-color: transparent transparent white transparent;
+  border-style: solid;
+  border-width: 10px;
+}
+
+.timeline-point:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 12px;
+  left: -4px;
+  width: 0;
+  height: 0;
+  border-color: transparent transparent #ccc transparent;
+  border-style: solid;
+  border-width: 10px;
+}
+
+.timeline-container {
+  background: white;
+  border: 1px solid rgba(0, 0, 0, .1);
+  border-radius: 2px;
+  padding: 1em 1em 0;
+  z-index: 1;
+  position: relative;
+  top: 1.9em;
+}
+
+
+
+.timeline-brief {
+  text-align: right;
+  float:left;
+  width:70%;
+
+    h4 { 
+    font-size: 24px;
+    font-weight: 500;
+    color:#e52900;
+    text-transform: none;
+  }
+
+  h5 {
+    font-size:12px;
+    color:#999;
+    font-weight: 500;
+  }
+
+  p {
+    font-size: 15px;
+  }
+}
+
+.timeline-screens {
+  float:left;
+  width:22%;
+  padding-left:8%;
+  display: inline-block;
+  vertical-align: top;
+}
