Basic show/hide functionality for extra detail on Timeline.

--- a/app/views/pages/adventures.html.erb
+++ b/app/views/pages/adventures.html.erb
@@ -5,7 +5,7 @@
     <a href="http://dribbble.com/pvm" class="social-icon dribble"></a>
   </div>
 
-  <div class="home-hero">
+  <div class="my-adventures">
     <h3 class="offset-1 column-10">Adventures</h3>
     <div class="offset-1 column-7">
       <p>I was a <a href="#">hacker at 3</a>. As I grew, the world grew. It’s interesting how much changes as time passes. I found that my desire to help people grew stronger as I encountered problem after problem. It soon became clear that problems could only be solved by trying to solve them. Imagine that.</p>
@@ -28,7 +28,7 @@
         <div class="timeline-container cf">
           <div class="timeline-brief">
             <h4>Kale</h4>
-            <h5>Product design • Rails Web API • iOS Client</h5>
+            <h5>Product design &middot; Rails Web API &middot; iOS Client</h5>
             <p>Celebrate your food to eat healthier. Kale helps people track and share their meals.</p>
           </div><!-- end .timeline-brief -->
           <div class="timeline-screens">
@@ -46,9 +46,9 @@
         <div class="timeline-point"></div>
         <div class="timeline-container cf">
           <div class="timeline-brief">
-            <h4>Kale</h4>
-            <h5>Product design • Rails Web API • iOS Client</h5>
-            <p>Celebrate your food to eat healthier. Kale helps people track and share their meals.</p>
+            <h4>Cor</h4>
+            <h5>Product design &middot; Front-end dev &middot; PHP back-end integration</h5>
+            <p>Health is no longer a perk, it’s a priority. Cor is an employee wellness engagement platform.</p>
           </div><!-- end .timeline-brief -->
           <div class="timeline-screens">
             <img src="" width="50px" height="50px" />
@@ -56,7 +56,14 @@
             <img src="" width="50px" height="50px" />
             <img src="" width="50px" height="50px" />
           </div>
+          <a href="#timeline-cor-opened" class="description-trigger-open" data-description="timeline-cor">&#9660;</a>
         </div><!-- end .timeline-container -->
+
+        <div class="timeline-description" id="timeline-cor">
+          <h6>The Story of Cor</h6>
+          <p>Around the beginning of September, I realized I wanted to focus my efforts in health. I wanted to retrace my roots that started with Parkour back in 2003.</p>
+          <p>I looked around for the best health startups in the DC area. Quickly found Nicholas and his gang of wellness chutzpahs. We met for coffee, hit it off, and within a few weeks I had joined the team part-time to help with a refining of their cor(e) product.</p>
+          <a href="#timeline-cor-closed" class="description-trigger-close" data-description="timeline-cor">&#9650;</a>
       </li><!-- end .timeline-item -->
 
 
