--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,4 +1,5 @@
 $main_red: #e52900;
+$body_background: #fafafa;
 
 body {
   font-family: "Proxima Nova", "Helvetica Neue", "Helvetica", sans-serif;
@@ -7,7 +8,7 @@ body {
   color:#555555;
   font-size: large;
   line-height: 1.4;
-  background:#fafafa;
+  background:$body_background;
 }
 
 h1, h2, h3, h4 {
@@ -152,7 +153,7 @@ p { font-size:large; line-height:1.5; color: #555555;}
 
 .adventures-timeline {
   background:url("/assets/timeline-spine.png") repeat-y top center;
-  height:400px;
+  height:auto;
   border-top:4px solid #e52900;
   padding:0;
   list-style: none;
@@ -251,4 +252,58 @@ p { font-size:large; line-height:1.5; color: #555555;}
   padding-left:8%;
   display: inline-block;
   vertical-align: top;
+}
+
+.timeline-description {
+  display: none; // Will show up using JS on click
+  background: $body_background;
+  padding:.25em 1em 1em;
+  margin-top: 3em;
+  font-size:18px;
+  color: #999;
+
+  h6 { font-size:1.2em; margin:0 0 .5em; font-weight:100; color:#222;}
+}
+
+.description-trigger-open,
+.description-trigger-close {
+  position: absolute;
+  bottom: .5em;
+  left: .5em;
+  background: $body_background;
+  border-radius: 3px;
+  padding: .2em .5em .1em;
+  text-decoration: none;
+  color: white;
+  font-size: 12px;
+  border:1px solid rgba(0,0,0,.2);
+}
+
+.description-trigger-open { 
+  border:1px solid $main_red; 
+  background: $main_red;
+
+  &:hover {
+    border-color:rgba(0,0,0,.25);
+    background-color: $main_red;
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%), $main_red; /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.1))), $main_red; /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%), $main_red; /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%), $main_red; /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%), $main_red; /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%), $main_red; /* W3C */
+  }
+}
+.description-trigger-close { 
+  color: #aaa; 
+
+  &:hover {
+    border-color:rgba(0,0,0,.25);
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%); /* W3C */
+  }
 }
