--- a/app/views/pages/adventures.html.erb
+++ b/app/views/pages/adventures.html.erb
@@ -8,12 +8,11 @@
   <div class="my-adventures">
     <h3 class="offset-1 column-10">Adventures</h3>
     <div class="offset-1 column-7">
-      <p>I was a <a href="#">hacker at 3</a>. As I grew, the world grew. It’s interesting how much changes as time passes. I found that my desire to help people grew stronger as I encountered problem after problem. It soon became clear that problems could only be solved by trying to solve them. Imagine that.</p>
       <p>By thinking through ideal solutions, you’re forced to consider a problem from all sorts of perspectives. I learned early on that the more perspectives you could bring to the table, the stronger your ability to craft a solution that made sense.</p>
 
-      <p>Fewer perspectives meant a less-than-satisfactory result. And anything less than your best effort just isn’t worth it. This meant I needed to keep an open mind; I needed to learn and appreciate from those around me.</p>
+      <p>Fewer perspectives mean a less-than-satisfactory result. And anything less than your best effort just isn’t worth it. I needed to keep an open mind; I needed to learn and appreciate from those around me.</p>
 
-      <p>These days, this sort of thinking is labeled "design thinking", as-in thinking about why a series of systems isn’t accomplishing a particular goal, what the system is composed of, and how to change it to fix the problem.</p>
+      <p>This sort of thinking is labeled "design thinking", as-in thinking about <em>why</em> a series of systems isn’t accomplishing a particular goal, <em>what</em> the system is composed of, and <em>how</em> to change it to fix the problem.</p>
 
       <p>This is what I enjoy doing.</p>
 
@@ -27,7 +26,7 @@
         <div class="timeline-point"></div>
         <div class="timeline-container cf">
           <div class="timeline-brief">
-            <h4>Kale</h4>
+            <h4><a href="http://getkale.com">Kale</a></h4>
             <h5>Product design &middot; Rails Web API &middot; iOS Client</h5>
             <p>Celebrate your food to eat healthier. Kale helps people track and share their meals.</p>
           </div><!-- end .timeline-brief -->
@@ -46,7 +45,7 @@
         <div class="timeline-point"></div>
         <div class="timeline-container cf">
           <div class="timeline-brief">
-            <h4>Cor</h4>
+            <h4><a href="http://corhq.com">Cor</a></h4>
             <h5>Product design &middot; Front-end dev &middot; PHP back-end integration</h5>
             <p>Health is no longer a perk, it’s a priority. Cor is an employee wellness engagement platform.</p>
           </div><!-- end .timeline-brief -->
@@ -64,6 +63,23 @@
           <p>Around the beginning of September, I realized I wanted to focus my efforts in health. I wanted to retrace my roots that started with Parkour back in 2003.</p>
           <p>I looked around for the best health startups in the DC area. Quickly found Nicholas and his gang of wellness chutzpahs. We met for coffee, hit it off, and within a few weeks I had joined the team part-time to help with a refining of their cor(e) product.</p>
           <a href="#timeline-cor-closed" class="description-trigger-close" data-description="timeline-cor">&#9650;</a>
+      </li><!-- end .timeline-item -->
+
+      <li class="timeline-item">
+        <div class="timeline-point"></div>
+        <div class="timeline-container cf">
+          <div class="timeline-brief">
+            <h4>Startup DC: Reboot America</h4>
+            <h5>Web design/development &middot; Rails back-end &middot; Tumblr template</h5>
+            <p>Focusing America’s leading corporations and emerging startups on innovative solutions to our country’s greatest challenges.</p>
+          </div><!-- end .timeline-brief -->
+          <div class="timeline-screens">
+            <img src="" width="50px" height="50px" />
+            <img src="" width="50px" height="50px" />
+            <img src="" width="50px" height="50px" />
+            <img src="" width="50px" height="50px" />
+          </div>
+        </div><!-- end .timeline-container -->
       </li><!-- end .timeline-item -->
 
 
