Minor change to content in Adventures page.

--- a/app/views/pages/adventures.html.erb
+++ b/app/views/pages/adventures.html.erb
@@ -7,7 +7,7 @@
 
   <div class="my-adventures">
     <h3 class="offset-1 column-10">Adventures</h3>
-    <div class="offset-1 column-7">
+<!--     <div class="offset-1 column-7">
       <p>By thinking through ideal solutions, you’re forced to consider a problem from all sorts of perspectives. I learned early on that the more perspectives you could bring to the table, the stronger your ability to craft a solution that made sense.</p>
 
       <p>Fewer perspectives mean a less-than-satisfactory result. And anything less than your best effort just isn’t worth it. I needed to keep an open mind; I needed to learn and appreciate from those around me.</p>
@@ -17,7 +17,7 @@
       <p>This is what I enjoy doing.</p>
 
       <p>I wanted to reflect on where I’ve come from so I could better understand where I should be going. This involved piecing together the series of my experiences. It’s currently incomplete, but below you’ll find enough to get you in trouble.</p>
-    </div>
+    </div> -->
 
     <ol class="offset-1 adventures-timeline column-7">
       <li class="year">2013</li>
@@ -69,7 +69,7 @@
         <div class="timeline-point"></div>
         <div class="timeline-container cf">
           <div class="timeline-brief">
-            <h4>Startup DC: Reboot America</h4>
+            <h4><a href="http://rebootamerica.org">Startup DC: Reboot America</a></h4>
             <h5>Web design/development &middot; Rails back-end &middot; Tumblr template</h5>
             <p>Focusing America’s leading corporations and emerging startups on innovative solutions to our country’s greatest challenges.</p>
           </div><!-- end .timeline-brief -->
