Decided to ditch this idea...

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Paul Mederos</title>
+  <title>The Adventures of the commendable Paul Mederos, Journeyman Designer and Engineer</title>
   
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600,700' 
