--- a/app/views/pages/adventures.html.erb
+++ b/app/views/pages/adventures.html.erb
@@ -24,19 +24,20 @@
 
       <li class="timeline-item">
         <div class="timeline-point"></div>
-        <div class="timeline-container cf">
+        <div class="timeline-container cf" id="kale-container">
           <div class="timeline-brief">
             <h4><a href="http://getkale.com">Kale</a></h4>
             <h5>Product design &middot; Rails Web API &middot; iOS Client</h5>
             <p>Celebrate your food to eat healthier. Kale helps people track and share their meals.</p>
           </div><!-- end .timeline-brief -->
-          <div class="timeline-screens">
-            <img src="" width="50px" height="50px" />
-            <img src="" width="50px" height="50px" />
-            <img src="" width="50px" height="50px" />
-            <img src="" width="50px" height="50px" />
+          <div class="timeline-showcase">
+            <img src="http://paulmederos.s3.amazonaws.com/adventures/kale-preview.png" 
+                 class="timeline-preview" data-description="timeline-kale" />
           </div>
         </div><!-- end .timeline-container -->
+        <div class="timeline-description" id="timeline-kale">
+          <img src="http://paulmederos.s3.amazonaws.com/adventures/kale-hero.png" />
+        </div>
       </li><!-- end .timeline-item -->
 
       <li class="year inner-year">2012</li>
@@ -49,20 +50,17 @@
             <h5>Product design &middot; Front-end dev &middot; PHP back-end integration</h5>
             <p>Health is no longer a perk, it’s a priority. Cor is an employee wellness engagement platform.</p>
           </div><!-- end .timeline-brief -->
-          <div class="timeline-screens">
-            <img src="" width="50px" height="50px" />
-            <img src="" width="50px" height="50px" />
-            <img src="" width="50px" height="50px" />
-            <img src="" width="50px" height="50px" />
+          <div class="timeline-showcase">
+            <img src="http://paulmederos.s3.amazonaws.com/adventures/cor-preview.png" 
+                 class="timeline-preview" data-description="timeline-cor" />
           </div>
-          <a href="#timeline-cor-opened" class="description-trigger-open" data-description="timeline-cor">&#9660;</a>
         </div><!-- end .timeline-container -->
 
         <div class="timeline-description" id="timeline-cor">
           <h6>The Story of Cor</h6>
           <p>Around the beginning of September, I realized I wanted to focus my efforts in health. I wanted to retrace my roots that started with Parkour back in 2003.</p>
           <p>I looked around for the best health startups in the DC area. Quickly found Nicholas and his gang of wellness chutzpahs. We met for coffee, hit it off, and within a few weeks I had joined the team part-time to help with a refining of their cor(e) product.</p>
-          <a href="#timeline-cor-closed" class="description-trigger-close" data-description="timeline-cor">&#9650;</a>
+        </div>
       </li><!-- end .timeline-item -->
 
       <li class="timeline-item">
@@ -73,11 +71,8 @@
             <h5>Web design/development &middot; Rails back-end &middot; Tumblr template</h5>
             <p>Focusing America’s leading corporations and emerging startups on innovative solutions to our country’s greatest challenges.</p>
           </div><!-- end .timeline-brief -->
-          <div class="timeline-screens">
-            <img src="" width="50px" height="50px" />
-            <img src="" width="50px" height="50px" />
-            <img src="" width="50px" height="50px" />
-            <img src="" width="50px" height="50px" />
+          <div class="timeline-showcase">
+            <img src="http://paulmederos.s3.amazonaws.com/adventures/reboot-preview.png" class="timeline-preview" />
           </div>
         </div><!-- end .timeline-container -->
       </li><!-- end .timeline-item -->
