--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -8,7 +8,6 @@ body {
 
   color:#555555;
   font-size: large;
-  line-height: 1.4;
   background:$body_background;
 }
 
@@ -19,7 +18,7 @@ h1, h2, h3, h4 {
 
 h1 { color: $main_red; }
 h2 { text-transform:uppercase; margin:0; padding:1em 0; font-weight:100; color:$main_red; font-size:1.75em; }
-h3 { font-size:36px; font-weight:500; margin:3em 0 2em; }
+h3 { font-size:36px; font-weight:500; margin:2em 0; }
 h4 { margin:0 0 .5em; text-transform:uppercase; font-weight:500; }
 
 p { font-size:large; line-height:1.5; color: #555555;}
@@ -216,7 +215,7 @@ p { font-size:large; line-height:1.5; color: #555555;}
   background: white;
   border: 1px solid rgba(0, 0, 0, .1);
   border-radius: 2px;
-  padding: 1em 1em 0;
+  padding: .75em;
   z-index: 1;
   position: relative;
   top: 1.9em;
@@ -253,12 +252,25 @@ p { font-size:large; line-height:1.5; color: #555555;}
   }
 }
 
-.timeline-screens {
+.timeline-showcase {
   float:left;
   width:22%;
   padding-left:8%;
   display: inline-block;
   vertical-align: top;
+}
+
+.timeline-preview {
+  display: block;
+  width:100%;
+  min-height: 36px;
+  box-shadow:0 1px 3px rgba(0,0,0,.2);
+  -webkit-transition: all .3s ease-in-out;
+}
+
+.timeline-preview:hover {
+  box-shadow:0 1px 4px rgba(0,0,0,.3);
+  cursor: pointer;
 }
 
 .timeline-description {
@@ -270,6 +282,7 @@ p { font-size:large; line-height:1.5; color: #555555;}
   color: #999;
 
   h6 { font-size:1.2em; margin:0 0 .5em; font-weight:100; color:#222;}
+  img { max-height:480px; }
 }
 
 .description-trigger-open,
@@ -279,7 +292,7 @@ p { font-size:large; line-height:1.5; color: #555555;}
   left: .5em;
   background: $body_background;
   border-radius: 3px;
-  padding: .2em .5em .1em;
+  padding: .2em .4em .1em;
   text-decoration: none;
   color: white;
   font-size: 12px;
@@ -314,3 +327,10 @@ p { font-size:large; line-height:1.5; color: #555555;}
     background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%); /* W3C */
   }
 }
+
+.pressed {
+  box-shadow:inset 0 1px 4px rgba(0,0,0,.3);
+}
+
+.pressed:hover { box-shadow: inherit; }
+
