--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>The Adventures of the commendable Paul Mederos, Journeyman Designer and Engineer</title>
-  
+  <meta name="description" content="Here you will find chronicled the adventures of sir Paul Mederos as he travels the world, inspriing people to lead more fulfilling lives.">
+  <meta name="viewport" content="width=device-width">
+
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600,700' 
         rel='stylesheet' type='text/css'>
