--- a/app/views/pages/adventures.html.erb
+++ b/app/views/pages/adventures.html.erb
@@ -9,9 +9,11 @@
     <div class="timeline-container"></div>
     <div class="intro">
       <h3>Adventures</h3>
-      <p>By thinking through ideal solutions, you’re forced to consider a problem from all sorts of perspectives. I learned early on that the more perspectives you could bring to the table, the stronger your ability to craft a solution that made sense.</p>
+      <p>If you consider it, design is a way of life.</p>
+      <p>The designer must take it upon themselves to discover the root of a problem. They must consider a problem from all sorts of perspectives, lest they admit weakness in their solution. They that their work is never done, for people always change, and design must adapt to people. Therefore, a designer could (and should) be defined by the cumulation of their experiences both within the context of exploring problems and their solutions, and in the context of discovering the world and its beauty.</p>
 
-      <p>Fewer perspectives mean a less-than-satisfactory result. And anything less than your best effort just isn’t worth it. I needed to keep an open mind; I needed to learn and appreciate from those around me.</p>
+      <p>Below you can sample a few of my recent perspectives.</p>
+      <p>Each one has it's tale. Each one carries its lessons. Each one changed the world &mdash; at least in some small way &mdash; by critically exploring it.</p>
     </div>
 
     <ol class="portfolio">
@@ -69,15 +71,9 @@
 
         <ul class="product-showcase">
           <li class="product-screenshot">
-            <img src="/assets/cor-hero-web.png" width="100%" class="hero-image" />
+            <img src="/assets/fosterly-hero-web.png" width="100%" class="hero-image" />
             <h6>Fig. F-1</h6>
-            <p>Responsive web/mobile designs for Cor.</p>
-          </li>
-
-          <li class="product-screenshot">
-            <img src="/assets/cor-hero-responsives.png" width="100%" />
-            <h6>Fig. F-2</h6>
-            <p>Landing page, dashboards, daily emails, etc.</p>
+            <p>Responsive web/mobile designs for Fosterly.</p>
           </li>
         </ul>
       </li><!-- end .portoflio-item -->
