--- a/app/views/pages/adventures.html.erb
+++ b/app/views/pages/adventures.html.erb
@@ -13,7 +13,7 @@
       <p>The designer must take it upon themselves to discover the root of a problem. They must consider a problem from all sorts of perspectives, lest they admit weakness in their solution. They that their work is never done, for people always change, and design must adapt to people. Therefore, a designer could (and should) be defined by the cumulation of their experiences both within the context of exploring problems and their solutions, and in the context of discovering the world and its beauty.</p>
 
       <p>Below you can sample a few of my recent perspectives.</p>
-      <p>Each one has it's tale. Each one carries its lessons. Each one changed the world &mdash; at least in some small way &mdash; by critically exploring it.</p>
+      <p>Each one has its tale. Each one carries its lessons. Each one changed the world &mdash; at least in some small way &mdash; by critically exploring it.</p>
     </div>
 
     <ol class="portfolio">
