New Relic added for monitoring.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -67,8 +67,8 @@
     <div class="adventure entrepreneurs-fosterly">
       <div class="offset-1 column-4 adventure-description">
         <h3>Foster.ly</h3>
-        <p>Celebrate your food to eat healtheir. Kale helps people track and share their meals. </p>
-        <p class="skills-provided">Product design &middot; front-end dev &middot; Rails API</p>
+        <p>Supporting entrepreneurs in the DC, MD, and VA area. Connect, learn, and share resources.</p>
+        <p class="skills-provided">Product design &middot; Front-end dev &middot; Rails APIs</p>
       </div>
       <div class="column-6">
         <img src="/assets/home/adventure-fosterly.png" />
