--- a/app/views/pages/adventures.html.erb
+++ b/app/views/pages/adventures.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="adventures">
-    <div class="timeline-container"></div>
+    <!-- <div class="timeline-container"></div> -->
     <div class="intro">
       <h3>Adventures</h3>
       <p>If you consider it, design is a way of life.</p>
